src/test/ui/issues/issue-13359.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13359.rs:6:9
   |
LL |     foo(1*(1 as isize));
   |         ^^^^^^^^^^^^^^ expected i16, found isize

error[E0308]: mismatched types
  --> $DIR/issue-13359.rs:10:9
   |
LL |     bar(1*(1 as usize));
   |         ^^^^^^^^^^^^^^ expected u32, found usize

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
